aks/render-with-turn.yml
# Source: livekit-server/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-livekit-server
  labels:
    helm.sh/chart: livekit-server-1.4.4
    app.kubernetes.io/name: livekit-server
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "v1.4.4"
    app.kubernetes.io/managed-by: Helm
  annotations:
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: livekit-server
    app.kubernetes.io/instance: release-name
---
# Source: livekit-server/templates/turnloadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: 'release-name-livekit-server-turn'
  labels:
    helm.sh/chart: livekit-server-1.4.4
    app.kubernetes.io/name: livekit-server
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "v1.4.4"
    app.kubernetes.io/managed-by: Helm
spec:
  type: LoadBalancer
  ports:
    - port: 443
      targetPort: 5349
      protocol: TCP
  selector:
    app.kubernetes.io/name: livekit-server
    app.kubernetes.io/instance: release-name
---
# Source: livekit-server/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-livekit-server
  labels:
    helm.sh/chart: livekit-server-1.4.4
    app.kubernetes.io/name: livekit-server
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "v1.4.4"
    app.kubernetes.io/managed-by: Helm
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: livekit-server
      app.kubernetes.io/instance: release-name
  template:
    metadata:
      annotations:
        linkerd.io/inject: disabled
        sidecar.istio.io/inject: "false"
        checksum/config: dda3f0c49500eccaf61d1a27f2632220fef2ee540ba8d665ef12b2d2bdd8b982
      labels:
        app.kubernetes.io/name: livekit-server
        app.kubernetes.io/instance: release-name
    spec:
      serviceAccountName: default
      securityContext:
        {}
      dnsPolicy: ClusterFirstWithHostNet
      hostNetwork: true
      terminationGracePeriodSeconds: 18000
      containers:
        - name: livekit-server
          securityContext:
            {}
          image: "livekit/livekit-server:v1.4.4"
          imagePullPolicy: IfNotPresent
          args: ["--disable-strict-config"]
          ports:
            - name: http
              containerPort: 7880
              protocol: TCP
            - name: rtc-tcp
              containerPort: 7881
              hostPort: 7881
              protocol: TCP
            - name: turn-tls
              containerPort: 5349
              hostPort: 5349
              protocol: TCP
            - name: turn-udp
              containerPort: 3478
              hostPort: 3478
              protocol: UDP
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 120
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 120
            periodSeconds: 30
          resources:
            limits:
              cpu: 2000m
              memory: 2048Mi
            requests:
              cpu: 1000m
              memory: 1024Mi
          volumeMounts:
            - name: lkturncert
              mountPath: /etc/lkcert
              readOnly: true
      volumes:
        - name: lkturncert
          secret:
            secretName: turn
---
# Source: livekit-server/templates/ingress.yaml
kind: Ingress
metadata:
  name: release-name-livekit-server
  labels:
    helm.sh/chart: livekit-server-1.4.4
    app.kubernetes.io/name: livekit-server
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "v1.4.4"
    app.kubernetes.io/managed-by: Helm
  annotations:
  # custom annotations
  # AWS ALB
  # GKE with managed certs
  # DO with cert manager
    cert-manager.io/cluster-issuer: letsencrypt
apiVersion: networking.k8s.io/v1
spec:
  ingressClassName: nginx
  rules:
  # In order to work with cert manager on DO, we cannot set us as a default backend
  - host: "joaquingarcia.ar"
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: release-name-livekit-server
            port:
              number: 80
  tls:
    - hosts:
        - "joaquingarcia.ar"
      secretName: "tls-secret-ingress-euge"
---
# Source: livekit-server/templates/tests/test-connection.yaml
apiVersion: v1
kind: Pod
metadata:
  name: "release-name-livekit-server-test-connection"
  labels:
    helm.sh/chart: livekit-server-1.4.4
    app.kubernetes.io/name: livekit-server
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "v1.4.4"
    app.kubernetes.io/managed-by: Helm
  annotations:
    "helm.sh/hook": test
spec:
  containers:
    - name: wget
      image: busybox
      command: ['wget']
      args: ['release-name-livekit-server:80']
  restartPolicy: Never
